<resources>
    <string name="app_name">Cocktail Recipes App</string>
    <string name="cocktail_image">cocktail image</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation_time">prep. time</string>
    <string name="difficulty">Difficulty</string>
    <string name="cocktail_ratings">cocktail ratings</string>
    <string name="ml" translatable="false">ml</string>
    <string name="img_time">img_time</string>
    <string name="img_difficulty">img_difficulty</string>
    <string name="trending_recipes">Trending recipes</string>
    <string name="see_all">See all</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_password">Password</string>
    <string name="invalid_password">Password must be at least 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_button">"Register"</string>
    <string name="failed_to_load_recipes_from_server">Failed to load recipes from server…</string>
    <string name="failed_to_add_recipe">Failed to add recipe. Check your internet connection or try later.</string>
    <string name="failed_to_load_ingredients_from_server">Failed to load ingredients from server…</string>
    <string name="ingredient_or_Unit_has_no_amount">Ingredient has no amount or unit!</string>
    <string name="error">Error…</string>
    <string name="switch_language">Russian</string>
    <string name="login_username">Username</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="minutes">min.</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="logout_button_text">Logout</string>
    <string name="rate_this_cocktail">Rate this cocktail</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="already_voted_ok">Okay</string>
    <string name="already_voted_title">Already voted!</string>
    <string name="already_voted_text">You already voted for this cocktail!</string>
    <string name="failed_to_delete_recipe">Failed to delete the recipe</string>
    <string name="dialog_delete_recipe">Are you sure you want to delete this recipe?</string>
    <string name="dialog_delete_recipe_delete">Yes</string>
    <string name="dialog_delete_recipe_cancel">No</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>

    <string name="language_setting">Language</string>
    <string name="recipes">Recipes</string>
    <string name="my_cocktails">Cocktails</string>
    <string name="liked_cocktails">Liked Cocktails</string>

    <string name="cocktail_creator">Creator</string>
    <string name="difficulty_very_easy">Very easy</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_very_hard">Very hard</string>
    <string name="instruction_title">Instruction:</string>

    <string name="add_recipe_button">add</string>
    <string name="add_a_new_recipe">Add new cocktail recipe</string>
    <string name="add_ingredients_to_recipe">Add ingredients to your recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_description">Recipe description</string>
    <string name="cocktail_ingredients">Cocktail ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="cocktail_description">Cocktail description</string>
    <string name="manage_ingredients">Manage ingredients</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="save_ingredients">Save</string>
    <string name="ingredient_title">Add ingredient</string>


    <string name="should_not_be_blank">Should not be blank</string>
    <string name="passwords_should_be_the_same">Passwords should be the same</string>
    <string name="username_to_less_characters">Should have 3 or more characters and no special characters</string>
    <string name="password_to_less_characters">Should have 5 or more characters</string>
    <string name="no_ingredients_selected">Your Cocktail has no ingredients</string>
    <string name="back" translatable="false">←</string>
    <string name="ingredient_amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="all_cocktails">All Cocktails</string>
    <string name="name_of_recipe_search">Name of recipe</string>
    <string name="rated">You rated</string>
    <string name="added">added</string>
    <string name="profile">Profile</string>
    <string name="filter_by_ingredients">Filter by ingredients</string>
    <string name="your_profile">Your Profile</string>
    <string name="sample_name" translatable="false">Sample name</string>
    <string name="user_profile_name">Name</string>
    <string name="image_url">Image URL</string>
    <string name="paste_url_here">paste URL here</string>
</resources>