<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="12dp">


    <TextView
        android:id="@+id/txtAddRecipe"
        android:text="@string/add_a_new_recipe"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/etRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/recipe_name"
        android:inputType="text"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minutes"/>
            <NumberPicker
                android:id="@+id/timer_picker_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="80dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/difficulty"/>
            <NumberPicker
                android:id="@+id/difficulty_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>




    </LinearLayout>

    <EditText
        android:id="@+id/etRecipDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/recipe_description"
        android:inputType="text"
        android:maxLines="20"
        android:minLines="1"
        />

    <Button
        android:id="@+id/btnAddRecipe"
        android:text="@string/add_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:gravity="bottom"/>



</LinearLayout>
