<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/ingredientItem">

    <CheckBox
        android:id="@+id/ingredientItemCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="false"
        android:text="@string/ingredient"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etIngredientAmount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/ingredient_amount"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/ingredientUnit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/unit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
