<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="111dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical">
            <TextView
                android:text="@string/ingredient_title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />
            <EditText
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredient"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSaveIngrediant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/accent_color"
                    android:gravity="center"
                    android:onClick="onClickAddIngredients"
                    android:text="@string/save_ingredients"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:id="@+id/btnCancelIngrediant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/accent_color"
                    android:gravity="center"
                    android:onClick="onClickCancelIngredient"
                    android:text="@string/cancel"
                    android:layout_marginLeft="5dp"/>
                android:text="Button" />

            </LinearLayout>
    </LinearLayout>


</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>