<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_marginVertical="4dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/cocktail_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cocktail_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/cocktail_rating_bar"
                    style="@android:style/Widget.Holo.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:progressBackgroundTint="@android:color/darker_gray"
                    android:progressTint="@color/accent_color" />

                <TextView
                    android:id="@+id/cocktail_ratings"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="12dp"
                    android:text="@string/cocktail_ratings"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/cocktail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/cocktail_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cocktail_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginVertical="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="0dp"
                android:text="@string/cocktail_name"
                android:textColor="@android:color/black"
                android:textSize="0sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_time"
                    android:paddingEnd="12dp"
                    app:srcCompat="@drawable/ic_time"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/cocktail_preparation_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingEnd="12dp"
                    android:text="@string/preparation_time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/img_difficulty"
                    android:paddingEnd="12dp"
                    app:srcCompat="@drawable/ic_bar_chart"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/cocktail_difficulty"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/difficulty"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>