<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/user_profile_top_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/user_profile_back_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="47dp"
                    android:layout_height="44dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white"
                    android:enabled="true"
                    android:foreground="?attr/actionModeCloseDrawable"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtYourProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_profile"
                    android:layout_marginTop="15dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/logoutButton"
                    app:layout_constraintStart_toEndOf="@+id/user_profile_back_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    android:onClick="onLogoutPressed"
                    app:srcCompat="@drawable/logout_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/txtViewLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:textColor="@color/black"
                    android:text="@string/logout_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoutButton"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_top_layout" />

        <TextView
            android:id="@+id/txtViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:text="@string/user_profile_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_top_layout"/>

        <TextView
            android:id="@+id/user_profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image"
            app:layout_constraintTop_toBottomOf="@+id/txtViewUserName" />

        <Switch
            android:id="@+id/swtlanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="10dp"
            android:checked="false"
            android:showText="false"
            android:textColor="@android:color/black"
            android:text="@string/switch_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLanguage"
            tools:checked="false"/>

        <TextView
            android:id="@+id/textViewLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/language_setting"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

        <TextView
            android:id="@+id/txtViewRecipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/recipes"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swtlanguage" />

        <Button
            android:id="@+id/own_recipe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/my_cocktails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/liked_recipe_button"
            app:layout_constraintTop_toBottomOf="@+id/txtViewRecipes" />

        <Button
            android:id="@+id/liked_recipe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/liked_cocktails"
            app:layout_constraintEnd_toStartOf="@+id/own_recipe_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/own_recipe_button"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="own_recipe_button,liked_recipe_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/progress_load_details"
        layout="@layout/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp" />

    <include
        layout="@layout/trending_cocktail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liked_recipe_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

</LinearLayout>